<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NeWork</string>
    <string name="menu">Menu</string>
    <string name="def_desc">Image</string>
    <string name="audio">Audio</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="login">Login</string>
    <string name="retry">Retry</string>
    <string name="empty_list">Empty list</string>
    <string name="add_post">Add post</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="post">Post</string>
    <string name="post_avatar">Post avatar</string>
    <string name="post_menu">Post menu</string>
    <string name="attachment">Attachment</string>
    <string name="likeds">Likeds</string>
    <string name="likes_button">Likes Button</string>
    <string name="mentioned">Mentioned</string>
    <string name="participate">Participate</string>
    <string name="share_post_button">Share Post Button</string>
    <string name="photo_attachment">Photo attachment</string>
    <string name="Remove">Remove</string>
    <string name="select_photo">Select Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="back">Back</string>
    <string name="prompt_password">Password</string>
    <string name="register">Don\'t have an account? Register</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="repeat_password">Password</string>
    <string name="likers">Likers</string>
</resources>