<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:cardCornerRadius="16dp"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grayBackground"
            android:paddingTop="@dimen/common_spacing"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/post_avatar_size"
                android:layout_height="@dimen/post_avatar_size"
                android:contentDescription="@string/post_avatar"
                android:src="@drawable/post_avatar_drawable"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                />

            <TextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/published"
                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside"
                tools:text="Нетология" />

            <TextView
                android:id="@+id/published"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:maxLines="1"
                android:textColor="@color/text_color"
                app:layout_constraintBottom_toBottomOf="@id/avatar"
                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toBottomOf="@id/author"
                tools:text="@sample/posts.json/data/published" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu"
                style="@style/Widget.AppTheme.AnyButton"
                android:layout_width="24dp"
                android:layout_height="48dp"
                android:contentDescription="@string/menu"
                android:layout_marginEnd="@dimen/common_spacing"
                app:icon="@drawable/ic_menu_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/top_post_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="published,avatar" />

            <TextView
                android:id="@+id/eventState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginTop="@dimen/common_spacing"
                android:maxLines="1"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attachment"
                tools:text="Online" />

            <TextView
                android:id="@+id/eventDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:maxLines="1"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventState"
                tools:text="@sample/posts.json/data/published" />

            <TextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autoLink="all"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDate"
                tools:ignore="VisualLintLongText"
                tools:text="@sample/posts.json/data/content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/like"
                style="@style/Widget.AppTheme.LikeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginTop="32dp"
                android:checkable="true"
                android:contentDescription="@string/likes_button"
                app:icon="@drawable/ic_like_selector_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content"
                tools:checked="true"
                tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck"
                tools:text="234" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sharePostButton"
                style="@style/Widget.AppTheme.AnyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginTop="32dp"
                android:checkable="true"
                android:contentDescription="@string/share_post_button"
                app:icon="@drawable/ic_share_24"
                app:layout_constraintStart_toEndOf="@id/like"
                app:layout_constraintTop_toBottomOf="@id/content"
                tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/participants"
                style="@style/Widget.AppTheme.AnyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginTop="32dp"
                android:checkable="true"
                android:contentDescription="@string/participate"
                app:icon="@drawable/ic_users_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content"
                tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck"
                tools:text="2" />

            <ImageView
                android:id="@+id/attachment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/attachment"
                app:layout_constraintTop_toBottomOf="@id/top_post_barrier"
                app:srcCompat="@drawable/ic_youtube" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>